packages/blocks-next/src/styles/image-slider.scss
@import './swiper.scss';

.sc-image-slider {
	user-select: none;

	&__thumbs {
		margin-top: var(--sc-slider-spacing, var(--sc-spacing-small));
		display: flex;
		align-items: stretch;

		.swiper {
			flex: 1; // important to prevent slideshow from collapsing.
		}

		.sc-image-slider__navigation {
			display: none;
		}

		&--has-navigation {
			.sc-image-slider__navigation {
				display: flex;
				outline: none;
				border: none;
				background: none;
			}
		}
	}

	&__navigation {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		font-size: 24px;
		cursor: pointer;

		&,
		&:focus,
		&:hover {
			color: var(--sc-color-black);
		}

		&.sc-image-slider {
			&--is-prev {
				padding-right: 8px;
			}
			&--is-next {
				padding-left: 8px;
			}
		}

		&.swiper-button-disabled {
			opacity: 0.25;
			cursor: default;
		}
	}

	/** Slider **/
	&__slider {
		cursor: grab;

		&.swiper-slide {
			border-radius: var(--sc-border-radius-medium);
			background: rgba(0, 0, 0, 0.1);
			overflow: hidden;

			img {
				display: block;
				margin: auto;
				max-width: 100%;
				height: auto;
				object-fit: contain;
				object-postion: center;
			}
		}
	}

	/** Thumbnails **/
	&__thumb {
		cursor: pointer;
		width: 100%;
		background: rgba(0, 0, 0, 0.1);
		border-radius: var(--sc-border-radius-medium);
		border: none;
		padding: 0;

		img {
			width: 100%;
			height: auto;
			display: block;
			object-fit: var(--sc-image-slideshow-thumb-object-fit, cover);
			aspect-ratio: var(--sc-image-slideshow-thumb-aspect-ratio, 4 / 3);
			border-radius: var(--sc-border-radius-medium);
		}

		&.swiper-slide-thumb-active {
			img {
				outline: var(
					--sc-image-slideshow-thumb-active-outline,
					2px solid
						var(
							--sc-focus-ring-color-primary,
							var(--sc-color-primary-500)
						)
				);
				outline-offset: -2px;
			}
		}

		&:hover,
		&:focus {
			background: rgba(0, 0, 0, 0.1);
			border: none;
		}
	}
}

